# flowtype

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: main.ts  overlay.html  style.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: .gitignore  icon.icns
src-tauri/src/: audio.rs  cleanup.rs  main.rs  paste.rs  recorder.rs  settings.rs  transcribe_groq.rs  transcribe_local.rs
