[package]
name = "flowtype"
version = "0.2.0"
description = "Voice-to-text dictation powered by Whisper and Groq"
authors = ["Tenfold Marketing"]
edition = "2021"

[lib]
name = "flowtype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
enigo = "0.2"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
hound = "3.5"
tokio = { version = "1", features = ["full"] }
dirs = "6"
arboard = "3"
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.10"
